--- a/quick_run/web/index.html
+++ b/quick_run/web/index.html
@@ -23,6 +23,9 @@
   <meta name="apple-mobile-web-app-title" content="quick_run">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Google Maps API for testing purposes. -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhUl9axir3grRjxVW61ZTL3I0ZgSS23_E"></script>
+
   <title>quick_run</title>
   <link rel="manifest" href="manifest.json">
 </head>
